welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: type int
	var n:int=0
              ^Variables:6: error: not found: type int
var r: int=0
       ^