welcome.lessons.welcome.variables.Variables.scala.code
while (!estSurBiscuit()){
	var n:int=0
	n=n+1;avance;
}
prendBiscuit()
var r: int=0
while (r!=n) {recule();r=r+1;}